# hackathon7

./: README.md
api/: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  sdk.js
api/api/: auth.py  database.py  main.py  models.py  processing.py
api/api/routes/: emotions.py  projects.py  users.py
client/: .gitignore  pyproject.toml
client/client/: get_api_key_gui.py  main.py
frontend/: docker-compose.yml  package.json
frontend/src/components/: Button.astro  Modal.astro  Titlebar.astro  UserDropdown.astro  Welcome.astro  button.astro  logos.astro  sidebar.astro  titlebar.astro
frontend/src/layouts/: Layout.astro  sbs.astro
frontend/src/lib/: sdk.js
frontend/src/pages/: dashboard.astro  index.astro  login.astro  project.astro  signup.astro
frontend/src/styles/: loginpage.css  style.css
