[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "dearpygui>=2.0.0",
    "facenet-pytorch>=2.2.9",
    "fer>=22.5.1",
    "ffmpeg>=1.4",
    "moviepy==1.0.3",
    "numpy<2",
    "opencv-contrib-python>=3.3.0.9",
    "pystray>=0.19.5",
    "tensorflow[and-cuda]==2.15.*",
    "torch>=2.0.1",
]
